Closed
Bug 682506
Opened 15 years ago
Closed 15 years ago
Upgrade ANGLE to r740
Categories
(Core :: Graphics: CanvasWebGL, defect)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla9
People
(Reporter: bjacob, Unassigned)
Details
On try:
http://tbpl.allizom.org/?tree=Try&usebuildbot=1&rev=cfc2855e3356
Also, ANGLE is now able to output GLES shader code, instead of just plain GLSL. Since we had to explicitly choose (ShConstructCompiler takes a new mandatory argument) this patch has a 1-line change in WebGLContextGL.cpp to choose GLES SL on GLES and desktop GLSL on desktop GL.
| Reporter | ||
Comment 1•15 years ago
|
||
Had to back out ANGLE r738 as it doesn't seem quite ready yet, see ANGLE bug 201.
New try:
http://tbpl.allizom.org/?tree=Try&usebuildbot=1&rev=89a1deef651b
| Reporter | ||
Comment 2•15 years ago
|
||
That was green.
ANGLE r740 should fix the regression from ANGLE r738. New try:
http://tbpl.allizom.org/?tree=Try&usebuildbot=1&rev=c10d8ce9659a
Summary: Upgrade ANGLE to r739 → Upgrade ANGLE to r740
| Reporter | ||
Comment 3•15 years ago
|
||
Comment 4•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
You need to log in
before you can comment on or make changes to this bug.
Description
•