Bug 682506 - Upgrade ANGLE to r740 - r=upstream

I need this now especially as it gets us the shader modification mechanisms to work around Mac GL crashes, see bug 665578

The relevant ANGLE revisions are 734, 738, and 740 fixes a bug in 738.

This also allows us to reset our set of cherrypicked ANGLE revisions which was starting to be very big.